--- a/property-microservice/src/main/resources/application.yml
+++ b/property-microservice/src/main/resources/application.yml
@@ -1,3 +1,4 @@
+server.port: 8081
 spring:
   datasource:
     url: ${JDBC_DATABASE_URL}
@@ -8,5 +9,6 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
+#      ddl-auto: update
 
