--- a/tournament-microservice/src/main/resources/application.yml
+++ b/tournament-microservice/src/main/resources/application.yml
@@ -3,9 +3,17 @@ spring:
         url: ${JDBC_DATABASE_URL}
         username: ${JDBC_DATABASE_USERNAME}
         password: ${JDBC_DATABASE_PASSWORD}
+        initialization-mode: ${INITIALIZE_DB}
     jpa:
         properties:
             hibernate:
                 dialect: org.hibernate.dialect.PostgreSQLDialect
+            jdbc:
+                time_zone: UTC
         hibernate:
-            ddl-auto: update
+            ddl-auto: ${SCHEMA_DB}
+server:
+    port: 8083
+    error:
+        include-message: always
+        include-stacktrace: never
