--- a/property-microservice/src/main/resources/application.yml
+++ b/property-microservice/src/main/resources/application.yml
@@ -1,4 +1,8 @@
-server.port: 8081
+server:
+  port: 8081
+  error:
+    include-message: always
+    include-stacktrace: never
 spring:
   datasource:
     url: ${JDBC_DATABASE_URL}
