--- a/property-microservice/src/main/resources/application.yml
+++ b/property-microservice/src/main/resources/application.yml
@@ -13,6 +13,6 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
-     # ddl-auto: create-drop
-       ddl-auto: update
+     ddl-auto: create-drop
+     #  ddl-auto: update
 
