--- a/quiz-microservice/src/main/resources/application.yml
+++ b/quiz-microservice/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
+    application:
+        name: quiz-microservice
     datasource:
         url: ${JDBC_DATABASE_URL}
         username: ${JDBC_DATABASE_USERNAME}
