--- a/person-microservice/pom.xml
+++ b/person-microservice/pom.xml
@@ -11,10 +11,10 @@
 	</parent>
 
 	<groupId>com.quizhub</groupId>
-	<artifactId>person</artifactId>
+	<artifactId>person-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>person</name>
-	<description>Person microservice</description>
+	<name>person-service</name>
+	<description>Person service</description>
 
 	<properties>
 		<java.version>11</java.version>
@@ -36,6 +36,11 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
 		</dependency>
 
 		<dependency>
@@ -64,6 +69,12 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
 		</dependency>
 	</dependencies>
 
