--- a/quiz-microservice/pom.xml
+++ b/quiz-microservice/pom.xml
@@ -68,6 +68,18 @@
 			<version>1.5.20</version>
 			<scope>compile</scope>
 		</dependency>
+        <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
+            <scope>compile</scope>
+        </dependency>
+		<dependency>
+			<groupId>com.quizhub</groupId>
+			<artifactId>property</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
