Set tournament service as grpc client, implement event registration

--- a/tournament-microservice/pom.xml
+++ b/tournament-microservice/pom.xml
@@ -67,6 +67,21 @@
             <version>1.1.1</version>
             <scope>compile</scope>
         </dependency>
+		<dependency>
+			<groupId>io.grpc</groupId>
+			<artifactId>grpc-netty-shaded</artifactId>
+			<version>1.37.0</version>
+		</dependency>
+		<dependency>
+			<groupId>io.grpc</groupId>
+			<artifactId>grpc-protobuf</artifactId>
+			<version>1.37.0</version>
+		</dependency>
+		<dependency>
+			<groupId>io.grpc</groupId>
+			<artifactId>grpc-stub</artifactId>
+			<version>1.37.0</version>
+		</dependency>
     </dependencies>
 
 	<dependencyManagement>
