Fix pom.xml for tournament & quiz microservice

--- a/tournament-microservice/pom.xml
+++ b/tournament-microservice/pom.xml
@@ -68,6 +68,11 @@
             <scope>compile</scope>
         </dependency>
 		<dependency>
+			<groupId>com.google.protobuf</groupId>
+			<artifactId>protobuf-java</artifactId>
+			<version>3.12.0</version>
+		</dependency>
+		<dependency>
 			<groupId>io.grpc</groupId>
 			<artifactId>grpc-netty-shaded</artifactId>
 			<version>1.37.0</version>
