--- a/person-microservice/pom.xml
+++ b/person-microservice/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
@@ -11,10 +11,10 @@
 	</parent>
 
 	<groupId>com.quizhub</groupId>
-	<artifactId>person-service</artifactId>
+	<artifactId>person</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>person-service</name>
-	<description>Person service</description>
+	<name>person</name>
+	<description>Person microservice</description>
 
 	<properties>
 		<java.version>11</java.version>
