--- a/property-microservice/pom.xml
+++ b/property-microservice/pom.xml
@@ -105,7 +105,12 @@
 			<artifactId>grpc-stub</artifactId>
 			<version>1.37.0</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
 	<dependencyManagement>
 		<dependencies>
