--- a/person-microservice/pom.xml
+++ b/person-microservice/pom.xml
@@ -100,6 +100,17 @@
 			<artifactId>grpc-stub</artifactId>
 			<version>1.37.0</version>
 		</dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.1</version>
+        </dependency>
 	</dependencies>
 
 	<dependencyManagement>
