--- a/tournament-microservice/pom.xml
+++ b/tournament-microservice/pom.xml
@@ -87,6 +87,10 @@
 			<artifactId>grpc-stub</artifactId>
 			<version>1.37.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+		</dependency>
     </dependencies>
 
 	<dependencyManagement>
