--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,8 +1,9 @@
-FROM node:10-alpine
+FROM node:12.19.0
 RUN mkdir /app
 WORKDIR /app
 COPY package.json /app
-RUN npm install
+COPY package-lock.json /app
+RUN npm install --silent
 COPY . /app
 EXPOSE 3000
 ENTRYPOINT ["npm", "start"]
