--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "jsonwebtoken": "^8.5.1",
     "node-sass": "^6.0.0",
     "react": "^17.0.1",
+    "react-compound-timer": "^1.2.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
