--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "antd": "^4.15.4",
     "axios": "^0.21.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "node-sass": "^6.0.0",
     "react": "^17.0.1",
     "react-compound-timer": "^1.2.0",
