--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,15 +10,20 @@
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.15.4",
     "axios": "^0.21.1",
+    "he": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "node-sass": "^6.0.0",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-compound-timer": "^1.2.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "sass": "^1.32.12",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.3",
+    "sweetalert2": "^11.0.11",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
