--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "antd": "^4.15.4",
     "axios": "^0.21.1",
     "he": "^1.2.0",
+    "js-joda": "^1.11.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "node-sass": "^6.0.0",
