--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
     "he": "^1.2.0",
     "js-joda": "^1.11.0",
     "jsonwebtoken": "^8.5.1",
+    "jspdf": "^2.3.1",
+    "jspdf-autotable": "^3.5.14",
     "moment": "^2.29.1",
     "node-sass": "^6.0.0",
     "prop-types": "^15.7.2",
