--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.15.4",
     "axios": "^0.21.1",
+    "chart.js": "^3.3.2",
     "he": "^1.2.0",
     "js-joda": "^1.11.0",
     "jsonwebtoken": "^8.5.1",
@@ -19,6 +20,7 @@
     "node-sass": "^6.0.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-chartjs-2": "^3.0.3",
     "react-compound-timer": "^1.2.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
